--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ta-te-ti-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "broadcast.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,8 @@
   },
   "homepage": "https://github.com/franjorub/ta-te-ti-server#readme",
   "dependencies": {
-    "axios": "^0.19.0",
     "express": "^4.17.1",
+    "nodemon": "^1.19.3",
     "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.2"
   }
 }
